# Asteroids

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.txt  cleancmake.sh  cmake_install.cmake
Backup/: asteroids.cpp
CMake/: FindGLFW.cmake
src/: CMakeLists.txt  Makefile  aster_count.cpp  aster_count.h  aster_object.cpp  aster_object.h  asteroids.cpp  asteroidsWindow.cc  ball_object.cpp  ball_object.h  camera.h  cmake_install.cmake  colored_quad.cc  colored_tri.cc  cubemaps.frag  cubemaps.vs  cubemaps_skybox_optimized.cpp  drawing.cc  game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  life_object.cpp  life_object.h  mesh.h  model.h  model_rendered.cpp  mvp_quad.cc  openGL_demo  resource_manager.cpp  resource_manager.h  shader.h  spinning_quad.cc  sprite_renderer.cpp  sprite_renderer.h  textured_quad.cc  transformed_quad.cc
src/astCount/: astCount.mtl
src/asteroid/: asteroid.mtl  asteroid.vs
src/heldFiles/: callbacks_quad.cc  textured_cube.cc  window.cc
src/lazer/: lazer.3ds  lazer.cpp  lazer.fbx  lazer.h  lazer.mtl
src/life/: life.mtl
